# analiseBeta

./: .gitignore  README.md  pyproject.toml
doc/: ITUB4cg_1anos.xlsx  ITUB4cg_3anos.xlsx  ITUB4cg_5anos.xlsx  ITUB4sg_1ano.xlsx  ITUB4sg_3anos.xlsx  ITUB4sg_5anos.xlsx  LREN3cg_1anos.xlsx  LREN3cg_3anos.xlsx  LREN3cg_5anos.xlsx  LREN3sg_1ano.xlsx  LREN3sg_3anos.xlsx  LREN3sg_5anos.xlsx  PETR4cg_1anos.xlsx  PETR4cg_3anos.xlsx  PETR4cg_5anos.xlsx  PETR4sg_1ano.xlsx  PETR4sg_3anos.xlsx  PETR4sg_5anos.xlsx  Relatório - Teste MǀoǀS Capital.md  SUZB3cg_1anos.xlsx  SUZB3cg_3anos.xlsx  SUZB3cg_5anos.xlsx  SUZB3sg_1ano.xlsx  SUZB3sg_3anos.xlsx  SUZB3sg_5anos.xlsx  WEGE3cg_1anos.xlsx  WEGE3cg_3anos.xlsx  WEGE3cg_5anos.xlsx  WEGE3sg_1ano.xlsx  WEGE3sg_3anos.xlsx  WEGE3sg_5anos.xlsx  comgraficos.xlsx  resultados_beta.xlsx
src/: gerar_graficos_anos.py  importar_dados_ibo.py  main.py
src/csv/: ITUB4.csv  LREN3.csv  PETR4.csv  SUZB3.csv  WEGE3.csv
src/database/: ITUB4.csv  SUZB3.csv
src/model/: analise.py
src/vba/: ITUB4.xlsm  LREN3.xlsm  PETR4.xlsm  SUZB3.xlsm  WEGE3.xlsm  calcularBeta.cls  gerarGraficos.bas  ~$ITUB4.xlsm
src/view/: exportacao_excel.py  graficos.py  visualizacoes.py
